# vbd-copilot

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  app.py  collector.py  copilot.session  package-lock.json  package.json  pyproject.toml  queries.py  router.py  server.py  server_adapter.py  store.py  tools.py  ui.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: squad.agent.md
.github/hooks/: session-validation.json
.github/workflows/: ci.yml
.squad/: decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/templates/: squad.agent.md
agents/: __init__.py  loader.py  registry.py
commands/: sessions.py  usage.py
docs/: INSTALLATION.md  USAGE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
outputs/: demo-research-appservice-portal-ghactions.md  demo2-aks-automatic-deployment-guardrails-research.md
scripts/: dev.sh  setup.sh
tests/: test_app.py  test_collector.py  test_commands.py  test_commands_sessions.py  test_demo_qa.py  test_hackathon_qa.py  test_loader.py  test_models.py  test_pptx_qa.py  test_pptx_utils_language.py  test_pricing.py  test_qa_language_flag.py  test_queries.py  test_registry.py  test_router.py  test_router_extended.py  test_server.py  test_server_adapter.py  test_server_adapter_events.py  test_server_adapter_extended.py  test_server_coverage.py  test_server_extended.py  test_server_ws.py  test_session_connection.py  test_store.py  test_tools.py  test_tools_extended.py
(+147 files in other folders)
