[project]
name = "csa-copilot"
version = "3.0.0"
description = "CSA-Copilot: AI-powered presentation and demo builder for Microsoft Cloud Solution Architects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk==0.1.29",
    "mcp>=1.28.1",
    "pydantic>=2.0",
    "prompt-toolkit>=3.0.43",
    "rich>=13.0",
    "python-pptx>=1.0.2",
    "markitdown>=0.1.0",
    "pyyaml>=6.0",
    # Desktop server layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "pillow>=12.2.0",
    "pymupdf>=1.24",
]

[project.scripts]
csa-copilot = "app:main_entry"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.setuptools]
py-modules = ["app", "router", "tools", "ui", "pricing", "store", "collector", "queries", "server", "server_adapter"]
packages = ["agents", "commands"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = [
    "app.py",
    "ui.py",
    "tests/*",
    "skills/*",
    "agent_defs/*",
    "scripts/*",
    "outputs/*",
    "plans/*",
]

[tool.uv]
# onnxruntime 1.20.1 (pulled in by magika) has no cp314 wheel; 1.25.1+ does.
override-dependencies = ["onnxruntime>=1.25.1"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
